# Aegis-Project

./: .coverage  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.pypi.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml  shared-library-ci.yml  user-service-ci.yml
.kiro/schemas/: registry.yaml  users.yaml
.kiro/specs/api-gateway/: design.md  requirements.md  tasks.md
.kiro/specs/cicd-pipeline/: design.md  requirements.md  tasks.md
.kiro/specs/data-pipeline/: design.md  requirements.md  tasks.md
.kiro/specs/development-environment/: design.md  requirements.md  tasks.md
.kiro/specs/frontend/: design.md  requirements.md  tasks.md
.kiro/specs/infrastructure-setup/: design.md  requirements.md  tasks.md
.kiro/specs/logging-audit/: design.md  requirements.md  tasks.md
.kiro/specs/policy-service/: design.md  requirements.md  tasks.md
.kiro/specs/recommendation-service/: design.md  requirements.md  tasks.md
.kiro/specs/search-service/: design.md  requirements.md  tasks.md
.kiro/specs/shared-library/: completion-summary.md  design.md  requirements.md  tasks.md
.kiro/specs/user-service/: design.md  requirements.md  tasks.md
.openhands/microagents/: repo.md
aegis_shared/: __init__.py  version.py
aegis_shared/auth/: __init__.py  dependencies.py  jwt.py  jwt_handler.py  middleware.py  rbac.py
aegis_shared/cache/: __init__.py  client.py  decorator.py  redis_client.py
aegis_shared/config/: __init__.py  loader.py  secrets.py  settings.py
aegis_shared/database/: __init__.py  base_repository.py  connection.py  exceptions.py  manager.py  repository.py  retry.py  transaction.py
aegis_shared/errors/: __init__.py  exceptions.py  handlers.py  tracking.py  validation.py
aegis_shared/logging/: __init__.py  config.py  context.py  handlers.py  structured_logger.py
aegis_shared/messaging/: __init__.py  event_publisher.py  producer.py  publisher.py  schemas.py  subscriber.py
aegis_shared/migration/: coordinator.py  models.py
aegis_shared/models/: __init__.py  base.py  contracts.py  enums.py  masking.py  pagination.py  serialization.py
aegis_shared/monitoring/: __init__.py  custom_metrics.py  endpoints.py  health.py  metric.py  metrics.py  tracing.py
aegis_shared/schemas/: models.py  registry.py
aegis_shared/tests/: conftest.py  integration_tests.py  test_auth.py  test_cache.py  test_config.py  test_database.py  test_errors.py  test_logging.py  test_messaging.py  test_migration.py  test_models.py  test_monitoring.py  test_schemas.py  test_utils.py
aegis_shared/utils/: __init__.py  crypto.py  files.py  pagination.py  string.py  time.py  validation.py
docs/: AEGIS_SPECIFICATION.md  DESIGN_GUIDELINES.md  auth.md  ci-cd-guide.md  database.md  getting-started.md  integration-testing.md  private-pypi-deployment.md  private-pypi-setup.md  schema-registry.md
docs/00_FOUNDATION/: 00_CHARTER.md  01_PROJECT_STRUCTURE.md  02_SPEC_STRATEGY.md  03_GLOSSARY.md
docs/01_ARCHITECTURE/: 01_SYSTEM_OVERVIEW.md  02_MICROSERVICES_DESIGN.md  03_DATA_ARCHITECTURE.md  04_SECURITY_ARCHITECTURE.md
docs/02_CORE_COMPONENTS/: 01_DUAL_TRACK_PIPELINE.md  02_INTERACTIVE_AI_CORE.md  03_LIVING_GATEWAY.md  04_RULE_ENGINE.md  05_SCORE_FRAMEWORK.md
docs/03_DATA_AND_APIS/: 01_DATABASE_SCHEMA.md  02_API_CONTRACT.md  03_EVENT_SCHEMA.md  04_INTEGRATION_SPECS.md
docs/04_IMPLEMENTATION/: 01_MASTERPLAN.md  02_IMPLEMENTATION_GUIDE.md  03_DEPLOYMENT_SPECS.md  04_CONFIGURATION_GUIDE.md
docs/05_OPERATIONS/: 01_KUBERNETES_SPECS.md  02_MONITORING_SETUP.md  03_SECURITY_OPERATIONS.md  04_DISASTER_RECOVERY.md  05_MAINTENANCE_GUIDE.md
docs/06_QUALITY_ASSURANCE/: 01_TESTING_STRATEGY.md  02_PERFORMANCE_SPECS.md  03_SECURITY_TESTING.md  04_COMPLIANCE_CHECKLIST.md
docs/07_SPECIFICATIONS/DATA_PIPELINE/: 01_DATA_PIPELINE_OVERVIEW.md
docs/07_SPECIFICATIONS/FRONTEND/: 01_FRONTEND_OVERVIEW.md
docs/07_SPECIFICATIONS/POLICY_SERVICE/: 01_POLICY_SERVICE_OVERVIEW.md  02_BUSINESS_REQUIREMENTS.md
docs/07_SPECIFICATIONS/RECOMMENDATION_SERVICE/: 01_RECOMMENDATION_SERVICE_OVERVIEW.md  02_BUSINESS_REQUIREMENTS.md
docs/07_SPECIFICATIONS/SEARCH_SERVICE/: 01_SEARCH_SERVICE_OVERVIEW.md
docs/07_SPECIFICATIONS/USER_SERVICE/: 00_TASK_PLAN.md  01_USER_SERVICE_OVERVIEW.md  02_BUSINESS_REQUIREMENTS.md  03_TECHNICAL_DESIGN.md  04_API_SPECIFICATION.md  05_DATA_MODEL.md  06_INTEGRATION_SPECS.md  07_DEPLOYMENT_GUIDE.md  08_TESTING_STRATEGY.md
examples/sample-service/: .env.example  Dockerfile  README.md  config.py  docker-compose.yml  event_handlers.py  main.py  models.py  requirements.txt  services.py
examples/sample-service/monitoring/: prometheus.yml
examples/sample-service/tests/: conftest.py  test_main.py  test_shared_library_integration.py
examples/sample-service/tests/performance/: benchmark.py  test_performance.py
monitoring/: prometheus.yml
nginx/: nginx.conf
pythonforspecs/: analyze_all_specs.py  analyze_spec_structure.py  clean_design.py  merge_spec_documents.py  run_analysis.py
scripts/: build.py  ci-setup.sh  deploy-private.bat  deploy-private.py  setup-private-pypi.ps1  setup-private-pypi.sh  version-manager.py
specchecking/: SPEC_COMPLETE_CHECKLIST.md  SPEC_INSPECTION_CHECKLIST.md  SPEC_REVIEW_GUIDE.md  SPEC_VERIFICATION_REPORT.md
tests/performance/: benchmark.py  load_test.py
user-service/: .env.example  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
user-service/app/: __init__.py  config.py  main.py
user-service/monitoring/: prometheus.yml
user-service/tests/: __init__.py  test_integration.py
